--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_ui_auth: ^3.0.1
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
+  google_fonts: ^8.0.2
+  cloudinary_public: ^0.23.1
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
